--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ relative_permalinks: true
 
 # Setup
 title:            Nealo's Blog
-tagline:          'virtualise all the cloud things in a software defined automation script thing'
-description:      'virtualisation, cloud, automation, software-defined and all things of that ilk, with a leaning toward VMware'
+tagline:          'virtualise all the cloud stuff in a software defined automation script thing'
+description:      'virtualise all the cloud things in a software defined automation script thing, maybe using VMware'
 url:              http://www.chrisneale.org
 baseurl:          /
 
