--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            "Nealos Blog"
+title:            "Nealo's Blog"
 tagline:          'virtualise all the cloud stuff in a software defined automation script thing'
 description:      'virtualise all the cloud stuffs in a software defined automation script thing, maybe using VMware'
 url:              http://www.chrisneale.org
 baseurl:          /
 
-author:           Chris Neale
-  name:           "Nealos Blog"
+author:           
+  name:           Chris Neale
   url:            https://twitter.com/mrcneale
 
 paginate:         5
