--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,6 @@ sass:
   style: compressed
 gems:
   - jekyll-sitemap
-  - jekyll-gist
 
 kramdown:
   auto_ids: true
@@ -40,10 +39,31 @@ titlecase: true
 # Site owner
 owner:
   name: Chris Neale
-  twitter: #MrCNeale
+  twitter: MrCNeale
   google:
-    plus: #username
+    plus: +ChrisNeale
     analytics:
     verify:
+    
+    ad-client:
+    ad-slot:
+  bing-verify:
+  github: mrcneale
+  stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
+  linkedin: mrcneale
+  xing: #username
+  instagram: #username
+  lastfm: #username
+  tumblr: #username
+  pinterest: #username
+  foursquare: #username
+  steam: #username
+  dribbble: #username
+  youtube: #username
+  soundcloud: #username
+  weibo: #username
+  flickr: #username
+  codepen: #username
 
+include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
