--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ owner:
   name: Chris Neale
   twitter: MrCNeale
   google:
-    plus: +ChrisNeale
+    plus: ChrisNeale
     analytics:
     verify:
     
