--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,14 @@
 # Site navigation links
 
+
+- title: Home
+  url: /
+
+- title: "Categories"
+  url: /pages/categories/
+
+- title: "All Posts"
+  url: /pages/all-posts/
+
 - title: About
-  url: /about/
-
-- title: Sample Posts
-  url: /posts/
-
-- title: Theme Setup
-  url: /theme-setup/
+  url: /pages/about/
