--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Nealo's Blog
 locale:           en_GB
-url:			http://www.chrisneale.org
+url:			https://www.chrisneale.org
 
 
 # Jekyll configuration
