--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://www.chrisneale.org/'
 languageCode = 'en-us'
 title = 'Chris Neales Blog'
 theme = "m10c"
