--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = 'https://www.chrisneale.org/'
 languageCode = 'en-us'
 title = 'Chris Neales Blog'
 theme = "m10c"
+avatar = '/images/avatar.jpg'
 
 [markup.goldmark.renderer]
 unsafe= true
